INT-3585, INT-3567: Fixed rubric desription and notification not aligned properly in joule grader

--- a/styles.css
+++ b/styles.css
@@ -50,12 +50,6 @@
     text-align: center;
 }
 
-#local-joulegrader .gradingform_rubric-regrade {
-    max-width: 500px;
-    margin-left: auto;
-    marigin-right: auto;
-}
-
 #local-joulegrader-gradepane .content {
     text-align: left;
 }
